assets/css/main.css
html {
  font-size: 62.5%;
}

body {
  font-size: 1.6rem;
  font-family: 'Helvetica Neue', 'Arial', sans-serif;
  margin: 0 auto;
  line-height: 1.5;
}

a {
  color: #000;
}

.link-nowrap-nodec {
  text-decoration: none;
  white-space: nowrap;
}

.link-nowrap-nodec:hover {
  text-decoration: underline;
}

.link-fave-heart {
  text-decoration: none;
  color: red;
}

.link-fave-heart:hover {
  color: darkred;
}

.content {
  max-width: 64rem;
  margin: auto;
  padding: 2rem;
}

.content h1,
.content h2,
.content h3,
.content h4,
.content h5,
.content h6 {
  line-height: 1.125;
}

.content hr {
  border-top: 1px solid #949494;
  border-bottom: 0;
  background-color: #949494;
  color: #949494;
}

.content code,
.content pre {
  font-family: 'Monaco', monospace;
  background-color: #f8f8f8;
}

.content code {
  font-size: 1.5rem;
  padding: 0 0.4rem;
}

.content pre {
  display: block;
  font-size: .875em;
  white-space: pre;
  margin: 1.5em 0;
  padding: 1.5em 2em;
  line-height: 1.5;
  overflow-x: auto;
  word-break: break-all;
  word-wrap: break-word;
  border: 1px solid #e4e4e4;
  border-radius: 3px;
}

.content img {
  max-width: 100%;
  height: auto;
}

.content figure {
  margin: 1.6rem 0;
}

.content figure figcaption {
  font-size: 1.4rem;
  font-style: italic;
  line-height: 1.5;
  text-align: center;
  margin-top: 0.6rem;
  padding: 0 1rem;
}

.post-list {
  display: grid;
  row-gap: 0.5rem;
  margin-right: -2rem;
}

.post-list > .post-list-info {
  overflow: hidden;
  text-overflow: ellipsis;
  margin-right: 0.5rem;
}

.post-list > .post-list-date {
  white-space: pre;
}

.post-list > .post-list-misc {
  text-align: center;
}

.content > div#writing {
  grid-template-columns: 2fr 0.2fr 3rem;
}

.content > div#reading {
  grid-template-columns: 1.2fr 0.75fr 0.25fr 3rem;
}

.post-header > .post-title {
  margin: 0 0 0.3rem 0;
  font-size: 3rem;
  line-height: 1.15;
}

.post-header > .post-meta {
  font-size: 1.5rem;
  color: #767676;
}

.navbar {
  position: sticky;
  top: 0;
  background-color: #fff;
  z-index: 998;
}

.navbar-content {
  display: grid;
  grid-template-columns: 0.3fr 1.6fr 0.3fr;
  max-width: 64rem;
  margin: auto;
  z-index: 999;
  padding: 2.2rem 2rem 1.6rem 2rem;
}

.navbar-content > .navbar-internal-links {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  list-style: none;
  text-transform: capitalize;
  margin: 0;
  padding: 0;
}

.navbar-content > .navbar-external-links {
  display: flex;
  height: 2.8rem;
}

.navbar-external-links > .navbar-external-link {
  padding: 0.2rem 0 0 0.6rem;
}

.navbar-external-links > .navbar-external-link:first-of-type {
  padding: 0.2rem 0 0 0;
}

.navbar-external-links > .navbar-external-link svg {
  fill: #949494;
  width: 1.4em;
  height: 1.4em;
}

.navbar-external-links > .navbar-external-link svg:hover {
  fill: #333;
}

.navbar-separator {
  border-top: 1px solid #949494;
  border-bottom: 0;
  color: #949494;
  background-color: #949494;
  margin: 0;
}

/* support for Edge */
@supports (-ms-ime-align: auto) {
  .navbar-content > .navbar-internal-links {
    justify-content: space-around;
    margin: 0 1.4rem;
  }
}

/* adjustment when very small */
@media screen and (max-width: 50rem) {
  .post-list {
    margin-right: inherit;
  }

  .post-list > .post-list-info {
    margin-right: inherit;
  }

  .post-list > .post-list-info a {
    white-space: normal;
    text-decoration: underline;
  }

  .post-list > .post-list-misc {
    text-align: left;
    padding-bottom: 2rem;
  }

  .content div#writing,
  .content div#reading {
    gap: 0;
    grid-template-columns: 1fr;
  }

  .navbar {
    position: static;
  }

  .navbar-content {
    display: block;
    padding-bottom: 2.4rem;
  }

  .navbar-content > .navbar-internal-links {
    display: block;
    margin: 0.4rem 0 1.6rem 0;
    text-decoration: underline;
  }

  .navbar-content > .navbar-external-links {
    justify-content: flex-start;
    height: 2.7rem;
  }

  .navbar-content > .navbar-external-links svg {
    height: 1.6em;
    width: 1.6em;
  }
}

@media (prefers-color-scheme:dark) {
  body {
    background-color: #000;
    color: #ddd;
  }

  a {
    color: #ddd;
  }

  .link-fave-heart:hover {
    color: #ff9999;
  }

  .content code,
  .content pre {
    background-color: #333;
  }

  .content pre {
    border: 1px solid #666;
  }

  .post-header > .post-meta {
    color: #aaa;
  }

  .navbar {
    background-color: #000;
  }

  .navbar-external-links > .navbar-external-link svg:hover {
    fill: #ddd;
  }
}

